Updated `Playlist` mvc